# rust-minimal-kernel

./: .gitignore  Cargo.toml  LICENSE  README.md  linker.ld  x86_64-rust_os.json
src/: main.rs  vga_buffer.rs
