[package]
name = "rust-minimal-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "A minimalistic OS kernel written entirely in Rust"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
